--- a/grid/index.html
+++ b/grid/index.html
@@ -12,13 +12,13 @@
         <h1>Graph City</h1>
     </header>
     <section class="child-main" id="parent-section-2">
-        <div class="child-section-2">
+        <div id="child-1-section-2">
             <h2> Street art </h2>
             <p>Graffiti is usually appeared as graphics or lettering scratched, scrawled, painted or marked in any manner on property. Graffiti has existed since very ancient times in Ancient Greece and the Roman Empire. In ancient Rome, people don’t have
                 a photocopier or a fax machine or newspaper, and when you have a written message to let other people know, you scratched it on a wall. In modern times, however, graffiti is considered illegal in a lot of countries. But a country that with
                 significant tradition in graffiti is Brazil and Sao Paulo, one of the largest cities in Brazil, is considered to be the current center of inspiration for graffiti artists.</p>
         </div>
-        <div class="child-section-2">
+        <div id="child-2-section-2">
             <img src="https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1415&q=80" alt="">
         </div>
     </section>
