rearranged grid for responsiveness

--- a/grid/index.html
+++ b/grid/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body id="parent-main">
-    <header class="child-main">
+<body>
+    <header>
         <h1>Graph City</h1>
     </header>
-    <section class="child-main" id="parent-section-2">
+    <section id="parent-section-2">
         <div id="child-1-section-2">
             <h2> Street art </h2>
             <p>Graffiti is usually appeared as graphics or lettering scratched, scrawled, painted or marked in any manner on property. Graffiti has existed since very ancient times in Ancient Greece and the Roman Empire. In ancient Rome, people don’t have
@@ -22,7 +22,7 @@
             <img src="https://images.unsplash.com/photo-1499781350541-7783f6c6a0c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1415&q=80" alt="">
         </div>
     </section>
-    <section class="child-main" id="parent-section-3">
+    <section id="parent-section-3">
         <div class="child-section-3">
             <img src="https://images.unsplash.com/photo-1518693800412-ad92111a1d46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="">
             <p>
